initial rBoot support

--- a/app/Makefile
+++ b/app/Makefile
@@ -42,7 +42,8 @@ SUBDIRS= 					\
 	dhtlib					\
 	tsl2561					\
 	net					\
-	http
+	http					\
+	rboot
 
 endif # } PDIR
 
@@ -88,6 +89,7 @@ COMPONENTS_eagle.app.v6 = 			\
 	tsl2561/tsl2561lib.a			\
 	http/libhttp.a				\
 	net/libnodemcu_net.a			\
+	rboot/rboot.a 				\
 	modules/libmodules.a			\
 
 # Inspect the modules library and work out which modules need to be linked.
@@ -100,6 +102,7 @@ LINKFLAGS_eagle.app.v6 = 			\
 	-Wl,--gc-sections 			\
 	-Wl,-Map=mapfile 			\
 	-nostdlib 				\
+	-u Cache_Read_Enable_New		\
 	-T$(LD_FILE) 				\
 	-Wl,@../ld/defsym.rom			\
 	-Wl,--no-check-sections 		\
@@ -107,6 +110,7 @@ LINKFLAGS_eagle.app.v6 = 			\
 	-Wl,-static 				\
 	$(addprefix -u , $(SELECTED_MODULE_SYMS)) \
 	-Wl,--start-group 			\
+	$(DEP_LIBS_eagle.app.v6)		\
 	-lc 					\
 	-lgcc 					\
 	-lhal 					\
@@ -115,7 +119,7 @@ LINKFLAGS_eagle.app.v6 = 			\
 	-lnet80211 				\
 	-lwpa 					\
 	-lwpa2					\
-	-lmain 					\
+	-lmain2					\
 	-lsmartconfig 				\
 	-lssl 					\
 	-lcrypto				\
