--- a/app/rboot/Makefile
+++ b/app/rboot/Makefile
@@ -22,7 +22,7 @@ endif
 #   makefile at its root level - these are then overridden
 #   for a subtree within the makefile rooted therein
 #
-#DEFINES += 
+DEFINES += -Dprintf=c_printf
 
 #############################################################
 # Recursion Magic - Don't touch this!!
@@ -39,6 +39,8 @@ endif
 INCLUDES := $(INCLUDES) -I $(PDIR)include
 INCLUDES += -I ./
 INCLUDES += -I ../libc
+INCLUDES += -I ../platform
+INCLUDES += -I ../rboot
 INCLUDES += -I ../../rboot
 PDIR := ../$(PDIR)
 sinclude $(PDIR)Makefile
